# producer-consumer-project

./: CMakeLists.txt
include/effolkronium/: random.hpp
src/: main.cpp
src/baker/: Baker.cpp  Baker.h
src/baker_manager/: BakerManager.cpp  BakerManager.h
src/bread/: Bread.cpp  Bread.h
src/consumer/: Consumer.cpp  Consumer.h
src/person/: Person.cpp  Person.h
src/person_manager/: PersonManager.cpp  PersonManager.h
